# falkordb-py

./: .codecov.yml  .coverage  .gitignore  .readthedocs.yaml  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  cluster-compose  pyproject.toml  pytest.ini  sentinel-compose  setup.py  standalone-compose
.github/: dependabot.yml  wordlist.txt
.github/workflows/: lint.yml  pypi-publish.yaml  release.yml  spellcheck.yml  test.yml
docker/: cluster-compose.yml  sentinel-compose.yml  standalone-compose.yml
docs/: index.rst  requirements.txt
docs/source/: conf.py  falkordb.asyncio.rst  falkordb.rst  index.rst  modules.rst
examples/: embedded_example.py
falkordb/: __init__.py  _version.py  cluster.py  db.py  edge.py  exceptions.py  execution_plan.py  falkor.py  falkordb.py  graph.py  graph_schema.py  helpers.py  node.py  path.py  query_result.py  sentinel.py
falkordb/asyncio/: __init__.py  cluster.py  falkordb.py  graph.py  graph_schema.py  query_result.py  sentinel.py
falkordb/embedded/: __init__.py  client.py  configuration.py
falkordb/lite/: __init__.py  binaries.py  config.py  server.py
falkordb_py/: __init__.py  edge.py  execution_plan.py  falkor.py  path.py  query_result.py
tests/: test_ClusterCon_SentinelCon.py  test_Is_Sentinel_and_cluster.py  test_async_constraints.py  test_async_copy.py  test_async_db.py  test_async_explain.py  test_async_graph.py  test_async_indices.py  test_async_profile.py  test_async_query_result.py  test_close.py  test_cluster.py  test_cluster_management.py  test_constraints.py  test_copy.py  test_db.py  test_edge.py  test_embedded.py  test_embedded_async.py  test_exceptions.py  test_execution_plan.py  test_explain.py  test_get_replica_connections.py  test_graph.py  test_graph_schema.py  test_helpers.py  test_indices.py  test_lite_binaries.py  test_lite_server.py  test_node.py  test_path.py  test_profile.py  test_query_result.py  test_sentinel.py
