[project]
name = "FalkorDB"
version = "1.4.0"
description = "Python client for interacting with FalkorDB database"
authors = [
    {name = "FalkorDB inc", email = "info@falkordb.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["FalkorDB", "GraphDB", "Cypher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "redis>=7.1.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "http://falkordb-py.readthedocs.io"
Repository = "http://github.com/falkorDB/falkordb-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
